src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.confetti {
    background-image: url('(app)/images/confetti.svg');
}

/*REMOVE SCROLLBAR*/

.no-scrollbar::-webkit-scrollbar {
    display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.no-scrollbar {
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}

/*MODAL*/

.react-aria-ModalOverlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100dvh;
    background: rgba(0 0 0 / .5);
    align-content: center;
    z-index: 100001;
    overflow-y: scroll;
    padding: 16px;

    &[data-entering] {
        animation: modal-fade 200ms;
    }

    &[data-exiting] {
        animation: modal-fade 150ms reverse ease-in;
    }
}

.react-aria-Modal {
    &[data-entering] {
        animation: modal-zoom 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
    }

    section {
        outline: none;
    }
}

@keyframes modal-fade {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

@keyframes modal-zoom {
    from {
        transform: scale(0.8);
    }

    to {
        transform: scale(1);
    }
}

/*POPOVER*/

.react-aria-Popover {
    @apply border border-sand-5 p-4 rounded-lg bg-sand-1 max-w-[700px] outline-none box-border shadow-lg;
    section {
        outline: none;
    }

    .react-aria-OverlayArrow svg {
        @apply stroke-1 block fill-sand-12 stroke-sand-12;
    }

    &[data-placement=top] {
        --origin: translateY(8px);

        &:has(.react-aria-OverlayArrow) {
            margin-bottom: 6px;
        }
    }

    &[data-placement=bottom] {
        --origin: translateY(-8px);

        &:has(.react-aria-OverlayArrow) {
            margin-top: 6px;
        }

        .react-aria-OverlayArrow svg {
            transform: rotate(180deg);
        }
    }

    &[data-placement=right] {
        --origin: translateX(-8px);

        &:has(.react-aria-OverlayArrow) {
            margin-left: 6px;
        }

        .react-aria-OverlayArrow svg {
            transform: rotate(90deg);
        }
    }

    &[data-placement=left] {
        --origin: translateX(8px);

        &:has(.react-aria-OverlayArrow) {
            margin-right: 6px;
        }

        .react-aria-OverlayArrow svg {
            transform: rotate(-90deg);
        }
    }

    &[data-entering] {
        animation: popover-slide 200ms;
    }

    &[data-exiting] {
        animation: popover-slide 200ms reverse ease-in;
    }
}

@keyframes popover-slide {
    from {
        transform: var(--origin);
        opacity: 0;
    }

    to {
        transform: translateY(0);
        opacity: 1;
    }
}

/*SWITCH*/

.react-aria-Switch {
    forced-color-adjust: none;
    @apply flex items-center gap-2 cursor-pointer;

    .indicator {
        width: 37px;
        height: 20px;
        @apply rounded-full bg-sand-6;
        transition: all 200ms;

    }

    .indicator:before {
        content: '';
        width: 16px;
        height: 16px;
        margin-top: 2px;
        margin-left: 2px;
        @apply rounded-full block bg-sand-1;
        transition: all 200ms;
    }

    &[data-pressed] .indicator {
        @apply border-sand-12;
    }

    &[data-pressed] .indicator:before {
        @apply bg-sand-1;
    }

    &[data-selected] {
        .indicator {
            @apply border-sand-12 bg-sand-12;
        }

        .indicator:before {
            @apply bg-sand-1;
            transform: translateX(105%);
        }

        &[data-pressed] {
            .indicator {
                @apply border-sand-12 bg-sand-12;

            }
        }
    }

    &[data-focus-visible] .indicator {
        @apply outline outline-2 outline-sand-10 outline-offset-2;
    }
}

/*CHECKBOX*/

.react-aria-Checkbox {
    --selected-color-pressed: #522acdff;
    --checkmark-color: #fff;
    --text-color: #21201c;
    --border-color: #21201c;
    --border-color-pressed: red;
    --focus-ring-color: red;
    --invalid-color: red;
    --invalid-color-pressed: #7c0000;

    display: flex;
    align-items: center;
    gap: 0.571rem;
    font-size: 1.143rem;
    color: var(--text-color);
    forced-color-adjust: none;

    .checkbox {
        width: 1.143rem;
        height: 1.143rem;
        border-radius: 2px;
        transition: all 200ms;
        display: flex;
        align-items: center;
        justify-content: center;
        @apply bg-sand-2 border-sand-10 border-solid border;
    }

    svg {
        width: 1rem;
        height: 1rem;
        fill: none;
        stroke: var(--checkmark-color);
        stroke-width: 3px;
        stroke-dasharray: 22px;
        stroke-dashoffset: 66;
        transition: all 200ms;
    }


    &[data-focus-visible] .checkbox {
        outline-offset: 2px;
        @apply outline outline-2 outline-sand-12;
    }

    &[data-selected],
    &[data-indeterminate] {
        .checkbox {
            @apply bg-sand-12 border-sand-12;
        }

        &[data-pressed] .checkbox {
            @apply bg-sand-12 border-sand-12;
        }

        svg {
            stroke-dashoffset: 44;
        }
    }

    &[data-indeterminate] {
        & svg {
            stroke: none;
            fill: var(--checkmark-color);
        }
    }

    &[data-invalid] {
        .checkbox {
            border-color: var(--invalid-color);
        }

        &[data-pressed] .checkbox {
            border-color: var(--invalid-color-pressed);
        }

        &[data-selected],
        &[data-indeterminate] {
            .checkbox {
                background: var(--invalid-color);
            }

            &[data-pressed] .checkbox {
                background: var(--invalid-color-pressed);
            }
        }
    }
}

